replace .getFirst() to .get(0), removeFirst() to remove(0)