@@ -23,8 +23,8 @@ public class Deck {
     }
 
     public Card draw(){
-        var res = cards.getFirst();
-        cards.removeFirst();
+        var res = cards.get(0);
+        cards.remove(0);
         return res;
     }
 }
